# tiny4bitCPU

./: CMakeLists.txt  README.md  main.c  register.c  register.h
assembler/: asembler.c
cpu/: cpu.c  cpu.h
decoder/: decoder.c  decoder.h
display/: display_memory_state.c
execute/: execute.c  execute.h
executor/: executor.c  executor.h
fetcher/: fetcher.c  fetcher.h
filesystem/: filesystem.c  filesystem.h
include/: assembler.h  cpu.h  decoder.h  display.h  display_memory_state.h  executor.h  filesystem.h  isa.h  memory.h  register.h
isa/: isa.h
memory/: memory.c  memory.h
register/: register.c  register.h
src/: asembler.c  cpu.c  decoder.c  display.c  executor.c  fetcher.c  filesystem.c  memory.c  register.c
util/: util.c  util.h
